--- a/MyBatis/pom.xml
+++ b/MyBatis/pom.xml
@@ -37,6 +37,18 @@
             <artifactId>h2</artifactId>
             <version>1.4.191</version>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>4.2.2</version>
+		</dependency>
+		 <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
     <build>
